[tool.poetry]
name = "whale-tracker"
version = "0.1.0"
description = ""
authors = ["rysky-boi <dave@rysk.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
requests = "^2.32.5"
ipython = "^9.9.0"
ipykernel = "^7.1.0"
jupyter = "^1.1.1"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
